<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background_appbar_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_no_internet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/colorBackground"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_no_internet"
                    android:layout_width="28dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/img_no_connect"
                    android:src="@drawable/ic_no_internet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/text_no_connect"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorError">

                </ImageView>

                <TextView
                    android:id="@+id/text_no_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no_connected"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorError"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_no_internet"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.Discoteca.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/my_nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:navGraph="@navigation/navigation" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="end"
            app:fabAnimationMode="slide"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="10dp"
            app:hideOnScroll="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                app:menu="@menu/bottom_navigation_menu" />

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_disc_img"
            app:layout_anchor="@id/bottom_app_bar"
            app:srcCompat="@drawable/ic_plus"
            tools:ignore="ImageContrastCheck" />

        <View
            android:id="@+id/menu_card_scrim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/background_scrim_color"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/menu_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:cardCornerRadius="20dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/add_a_disc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorOnSurface"
                    android:minHeight="?attr/listPreferredItemHeight">

                    <ImageView
                        android:id="@+id/ic_add_disc"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_marginStart="24dp"
                        android:contentDescription="@string/img_disc"
                        android:src="@drawable/ic_disc_outline"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/add_disc"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/add_disc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/add_disc"
                        android:textAppearance="@style/TextAppearance.Discoteca.Body1"
                        android:textColor="?attr/colorOnPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/ic_add_disc"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/scan_item"
                    style="@style/MenuCardItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/listPreferredItemHeight">

                    <TextView
                        android:id="@+id/scan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/scan_the_barcode"
                        android:textAppearance="@style/TextAppearance.Discoteca.Body1"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/manually_item"
                    style="@style/MenuCardItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/listPreferredItemHeight">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:lines="1"
                        android:text="@string/manually"
                        android:textAppearance="@style/TextAppearance.Discoteca.Body1"
                        android:textColor="?attr/colorOnBackground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/layout_scrim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="12dp"
            android:foreground="?attr/background_scrim_color"
            android:gravity="top"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorColor="?colorSecondary" />

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>


