...
            name="scanBarcodeViewModel"
            type="com.diego.discoteca.ui.scan.ScanBarcodeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scan_barcode_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        tools:context=".scan.ScanBarcodeViewModel">

        <androidx.camera.view.PreviewView
...
