...
        android:layout_marginBottom="64dp"
        android:transitionGroup="true"
        app:cardBackgroundColor="?attr/background_card_color"
        app:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".information.InformationViewModel">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_search_scan_database"
...
